<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome, how you doing?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="spider_man">Spider Man</string>
    <string name="god_of_war">God Of War</string>
    <string name="gran_turismo">Gran Turismo</string>
</resources>